--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # Database Configuration
 DB_TYPE=postgresql
 DB_USERNAME=postgres
-DB_PASSWORD=ebe3NM2
+DB_PASSWORD=*********
 DB_HOSTNAME=localhost
 DB_PORT=5432
 DB_NAME=contacts_db
-DATABASE_URL=postgresql://postgres:ebe3NM2@localhost:5432/contacts_db
+DATABASE_URL=postgresql://postgres:*********@localhost:5432/contacts_db
 DEFAULT_DATABASE_ENABLED=true
 DATABASE_ENABLED=false
 MCP_ENABLED=true
